--- a/src/main/resources/templates/email/restore-password-template.vm
+++ b/src/main/resources/templates/email/restore-password-template.vm
@@ -29,7 +29,7 @@
 					<table class="content" border="0" cellspacing="0" cellpadding="0" style="width: 100%; border-collapse:collapse;">
 						<tr><td style="padding-bottom: 24px;"><span><b>You have requested password recovery on Report Portal</b></span></td></tr>
 						<tr><td style="padding-bottom: 10px;"><span>Login: <b>${login}</b></span></td></tr>
-						<tr><td style="padding-bottom: 24px;"><span>To change your password please folow the link: <a href="${url}" style="font-weight:normal; color:#1a9cb0; text-decoration: underline;">Report Portal</a></span></td></tr>
+						<tr><td style="padding-bottom: 24px;"><span>To change your password please follow the link: <a href="${url}" style="font-weight:normal; color:#1a9cb0; text-decoration: underline;">Report Portal</a></span></td></tr>
 						<tr><td style="padding-bottom: 27px;"><span>If you haven`t requested password recovery, ignore this letter.</span></td></tr>
 						<tr><td><p style="width: 100%; height: 1px; background: lightgrey; margin: 0"></p></td></tr>
 					</table>​
