--- a/src/main/resources/templates/email/create-user-template.vm
+++ b/src/main/resources/templates/email/create-user-template.vm
@@ -43,7 +43,7 @@
 								<span style="font-family:Arial; font-size:12px; color:#464547;"><b>Report Portal Notification Center</b></span>
 							</td></tr>
 							<tr height="15" style="background-color:#ffffff"><td align="center">
-								<span style="font-family:Arial; font-weight:normal; font-size:12px; color:#464547;">This notification was created automatically. Please don't reply for this email.</span>
+								<span style="font-family:Arial; font-weight:normal; font-size:12px; color:#464547;">This is an automatically generated notification - please do not reply to this message.</span>
 							</td></tr>
 						</tbody>
 					</table>
