--- a/src/main/resources/templates/email/registration-template.vm
+++ b/src/main/resources/templates/email/registration-template.vm
@@ -40,7 +40,7 @@
 								<span style="font-family:Arial; font-size:12px; color:#464547;"><b>Report Portal Notification Center</b></span>
 							</td></tr>
 							<tr height="15" style="background-color:#ffffff"><td align="center">
-								<span style="font-family:Arial; font-weight:normal; font-size:12px; color:#464547;">This is an automatically generated notification - please do not reply to this message. You are receiving this email to complete the registration initiated on the ReportPortal application; if you don't wait for invitation in ReportPortal then just ignore this message. </span>
+								<span style="font-family:Arial; font-weight:normal; font-size:12px; color:#464547;">This is an automatically generated notification - please do not reply to this message. You are receiving this email to complete the registration initiated on the ReportPortal application; if you are not waiting for the ReportPortal's invitation then just ignore this message. </span>
 							</td></tr>
 						</tbody>
 					</table>
