update email templates

--- a/src/main/resources/templates/email/change-password-template.vm
+++ b/src/main/resources/templates/email/change-password-template.vm
@@ -28,7 +28,7 @@
             }
             table[class="mainimgwrapper"] {
                 height: 130px;
-                background-image: url("create-user.png");
+                background-image: url("illustration.png");
                 background-size: cover;
                 background-position: center;
             }
@@ -57,8 +57,8 @@
                 <tbody>
                 <tr>
                     <td height="130">
-                        <img class="mainimg" src="cid:create-user.png" border="0" width="540" height="130"
-                             alt="You have been successfully registered on Report Portal">
+                        <img class="mainimg" src="cid:illustration.png" border="0" width="540" height="130"
+                             alt="Your password has been changed">
                     </td>
                 </tr>
                 </tbody>
@@ -67,28 +67,11 @@
                 <tbody>
                 <tr>
                     <td align="left" height="170">
-                        <h2 style="font-size: 20px; color: #777777;" align="center">Welcome to Report Portal</h2>
-                        <p style="font-size: 14px; color: #777777;">You have been successfully registered on Report Portal.</p>
-                        <p style="font-size: 14px; line-height: 1.7; color: #777777">Please, use the following information to login:<br>
-                            Login: <b>${login}</b><br>
-                            Password: <b>${password}</b></p>
-                        <p align="center">
-                            <a href="${url}" style="text-decoration: none; color: #ffffff;">
-                                <table border="0" cellspacing="8" cellpadding="6" align="center">
-                                    <tbody>
-                                    <tr>
-                                        <td width="122" height="35" align="center" bgcolor="#a3c644">
-                                            <span style="font-size: 14px; color: #ffffff;">Login</span>
-                                        </td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </a>
-                        </p>
-                        <p style="font-size: 14px; color: #777777;">New to Report Portal? Check out all the details in the <a href="http://reportportal.io/#documentation/User-Guide" target="_blank">User Guide</a>.</p>
-                        <br>
-                        <p style="font-size: 14px; line-height: 1.7; color: #777777;">Thanks,<br>
-                            ReportPortal.io Team</p>
+                        <h2 align="center" style="font-size: 20px; color: #777777;">Your password has been changed</h2>
+                        <p style="font-size: 14px; color: #777777">The password for user
+                            <b>${user_name}</b> has been successfully changed.</p>
+                        <p style="font-size: 14px; color: #777777">If you didn’t change your password,
+                            please <a href="mailto:SupportEPMC-TSTReportPortal@epam.com?subject=Report%20Portal%20Support">Contact us</a>.</p>
                     </td>
                 </tr>
                 </tbody>
