--- a/src/main/resources/templates/email/restore-password-template.vm
+++ b/src/main/resources/templates/email/restore-password-template.vm
@@ -1,51 +1,132 @@
-<html style="font-size: 15px;-webkit-tap-highlight-color: rgba(0, 0, 0, 0);font-family: sans-serif;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <style type="text/css">
-    	.content {
-    		margin: 27px 0 19px 0;
-    		font-size: 14px;
-    	}
-    	.content td {
-    		padding: 0 39px;
-    	}
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>ReportPortal</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: OpenSans, sans-serif;
+        }
+        a, a:active, a:visited {
+            color: #39c2d7;
+            text-decoration: underline;
+        }
+        a:hover {
+            text-decoration: none;
+        }
+        @media only screen and (max-width: 540px) {
+            body {
+                margin: 0;
+                padding: 0;
+            }
+            table[class="mainwrapper"] {
+                width: 100% !important;
+            }
+            .rplogo {
+                margin-left: 15px;
+            }
+            table[class="mainimgwrapper"] {
+                height: 130px;
+                background-image: url("restore-password.png");
+                background-size: cover;
+                background-position: center;
+            }
+            .mainimg {
+                display: none;
+            }
+        }
     </style>
 </head>
-<body bgcolor="#FFFFFF" width="100%" style="font-family:Arial; margin: 0;">
-	<table >
-		<tbody>
-			<tr>
-				<td style="padding:0.75pt;">
-					<table border="0" cellspacing="0" cellpadding="0" style="width: 100%; border-collapse:collapse;">
-						<tbody>
-							<tr height="76">
-								<td width="76" style="background-color:#313131;padding:0.75pt;" align="center">
-									<span style="display:block; background-color:#313131;"><img src="cid:logoimg" height="39" width="49"></span></td>
-								<td width="674" style="margin-left:40px;background-color:#2b2b2b;padding:0.75pt;">
-									<span style="display:block; padding-left: 18px; background-color:#2b2b2b; color:#ffffff; font-size:16px;font-family:Arial; text-transform: uppercase;"><b>Report Portal password recovery</b></span>
-								</td>
-							</tr>
-						</tbody>
-					</table>​
-					<table class="content" border="0" cellspacing="0" cellpadding="0" style="width: 100%; border-collapse:collapse;">
-						<tr><td style="padding-bottom: 24px;"><span><b>You have requested password recovery on Report Portal</b></span></td></tr>
-						<tr><td style="padding-bottom: 10px;"><span>Login: <b>${login}</b></span></td></tr>
-						<tr><td style="padding-bottom: 24px;"><span>To change your password please follow the link: <a href="${url}" style="font-weight:normal; color:#1a9cb0; text-decoration: underline;">Report Portal</a></span></td></tr>
-						<tr><td style="padding-bottom: 27px;"><span>If you haven`t requested password recovery, ignore this letter.</span></td></tr>
-						<tr><td><p style="width: 100%; height: 1px; background: lightgrey; margin: 0"></p></td></tr>
-					</table>​
-					<table border="0" cellspacing="0" cellpadding="0" style="width: 100%; background-color:#ffffff;">
-						<tbody>
-							<tr height="15" style="background-color:#ffffff"><td align="center">
-								<span style="font-family:Arial; font-size:12px; color:#464547;"><b>Report Portal Notification Center</b></span>
-							</td></tr>
-							<tr height="15" style="background-color:#ffffff"><td align="center">
-								<span style="font-family:Arial; font-weight:normal; font-size:12px; color:#464547;">This is an automatically generated notification - please do not reply to this message.</span>
-							</td></tr>
-						</tbody>
-					</table>
-				</td>
-			</tr>
-		</tbody>
-	</table>
+<body bgcolor="#f9f9f9" topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0" link="#39c2d7" alink="#39c2d7" vlink="#39c2d7"
+      style="font-family: OpenSans, sans-serif;">
+<table width="540" border="0" cellspacing="0" cellpadding="0" align="center" class="mainwrapper">
+    <tbody>
+    <tr>
+        <td>
+            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="logowrapper">
+                <tbody>
+                <tr>
+                    <td height="48">
+                        <a class="rplogo" href="http://reportportal.io" target="_blank"><img src="cid:rp_io_logo.png" border="0" width="141" height="23" alt="ReportPortal.io" title="ReportPortal.io"></a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mainimgwrapper">
+                <tbody>
+                <tr>
+                    <td height="130">
+                        <img class="mainimg" src="cid:restore-password.png" border="0" width="540" height="130" alt="Restore your password to Report Portal">
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <table width="100%" border="0" cellspacing="0" cellpadding="30" class="contentwrapper" bgcolor="#ffffff">
+                <tbody>
+                <tr>
+                    <td align="left" height="170">
+                        <h2 style="font-size: 20px; color: #777777;" align="center">Forgot your password to Report Portal?</h2>
+                        <p style="font-size: 14px; color: #777777;">Click the link below to choose a new one.</p>
+                        <p align="center">
+                            <a href="${url}" style="text-decoration: none; color: #ffffff;">
+                                <table border="0" cellspacing="8" cellpadding="6" align="center">
+                                    <tbody>
+                                    <tr>
+                                        <td width="122" height="35" align="center" bgcolor="#a3c644">
+                                            <span style="font-size: 14px; color: #ffffff;">Reset Password</span>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </a>
+                        </p>
+                        <p style="font-size: 14px; color: #777777;">P.S. If you didn’t request this email, you may safety ignore it.</p>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <table width="100%" height="82" border="0" cellspacing="0" cellpadding="0" class="linkswrapper">
+                <tbody>
+                <tr>
+                    <td height="82" align="center">
+                        <table border="0" cellspacing="0" cellpadding="12" class="linksline" align="center">
+                            <tbody>
+                            <tr>
+                                <td><p style="font-size: 13px; color: #464547;">Keep in touch with us:</p></td>
+                                <td><a href="https://github.com/reportportal" target="_blank"><img src="cid:ic-github.png" border="0" width="20" height="21" alt="github"></a></td>
+                                <td><a href="https://www.facebook.com/ReportPortal.io" target="_blank"><img src="cid:ic-fb.png" border="0" width="18" height="18" alt="facebook"></a></td>
+                                <td><a href="http://twitter.com/ReportPortal_io" target="_blank"><img src="cid:ic-twitter.png" border="0" width="20" height="16" alt="twitter"></a></td>
+                                <td><a href="https://www.youtube.com/channel/UCsZxrHqLHPJcrkcgIGRG-cQ" target="_blank"><img src="cid:ic-youtube.png" border="0" width="20" height="15" alt="youtube"></a></td>
+                                <td><a href="https://vk.com/reportportal_io" target="_blank"><img src="cid:ic-vk.png" border="0" width="21" height="12" alt="vk"></a></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#bdc7cc" class="footerline">
+                <tbody>
+                <tr>
+                    <td height="1"><!-- --></td>
+                </tr>
+                </tbody>
+            </table>
+            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="footerwrapper">
+                <tbody>
+                <tr>
+                    <td align="center" height="52" class="footercontent">
+                        <p style="font-size: 11px; line-height: 1.5; color: #6d6d6d"><b>Report Portal Notification Center</b><br>
+                            This notification was created automatically. Please don't reply for this e-mail.</p>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
