update date utils

--- a/src/main/resources/templates/report/report.jrxml
+++ b/src/main/resources/templates/report/report.jrxml
@@ -47,6 +47,7 @@
         <field name="name" class="java.lang.String">
             <fieldDescription><![CDATA[]]></fieldDescription>
         </field>
+        <field name="duration" class="java.lang.String"/>
         <field name="status" class="java.lang.String"/>
         <field name="total" class="java.lang.Integer"/>
         <field name="passed" class="java.lang.Integer"/>
